@@ -1,3 +1,7 @@
+2008-02-20 Brian Matherly <brian@gramps-project.org>
+	* src/plugins/Verify.py:
+	0001792: Tools->Utilities->Verify the Data (exclude married names)
+
 2008-02-20  Raphael Ackermann <raphael.ackermann@gmail.com>
 	* src/GrampsDbUtils/_GedcomUtils.py: (IdMapper.get_translate()) return 
 	value of dict instead of boolean. Fix #0001708
